# P.Web-2.13

./: .gitignore
Part_1/: main.py  pyproject.toml
Part_1/src/: schemas.py
Part_1/src/repository/: authusers.py  users.py
Part_1/src/routes/: auth.py  avatar.py  users.py
Part_1/src/services/: auth.py
Part_2/: pyproject.toml
Part_2/quotes/: config.ini  db.sqlite3  from_mdb_to_psql.py
Part_2/quotes/quoteapp/: forms.py  models.py  urls.py  views.py
Part_2/quotes/quoteapp/migrations/: 0001_initial.py  0002_remove_quote_tags.py  0003_tag_quote_tags.py  0004_rename_qoute_quote_quote.py  0005_alter_author_bio.py  0006_alter_quote_quote.py  0007_alter_quote_quote.py  0008_alter_quote_quote.py  0009_alter_quote_quote.py  0010_alter_quote_quote.py  0011_alter_quote_quote.py  0012_alter_quote_quote.py
Part_2/quotes/quoteapp/static/quoteapp/: style.css
Part_2/quotes/quoteapp/templates/quoteapp/: author.html  base.html  detail.html  find_author.html  find_quote.html  index.html  quote.html
Part_2/quotes/quotes/: settings.py
Part_2/quotes/users/: forms.py  urls.py  views.py
Part_2/quotes/users/templates/users/: login.html
